--- a/changes.txt
+++ b/changes.txt
@@ -1,4 +1,3 @@
-Changes in v1.4.0:
+Changes in v1.4.1:
 
-	- Made some changes to the Look and Feel system.
-	- Changed "Second, " to "Moreover, " and changed "Finally, " to "In addition, ". In the future, more complex transition hooks may be implemented.
+	- Changed "In addition..." to "Furthermore..."
