--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,3 @@
-Changes in v1.4.1:
+Changes in v1.4.2:
 
-	- Changed "In addition..." to "Furthermore..."
+	- Disabled stripPunctuation function, at least for now.
