--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,42 @@
 Changes in v1.4.2:
 
 	- Disabled stripPunctuation function, at least for now.
+
+Changes in v1.4.1:
+
+	- Changed "In addition..." to "Furthermore..."
+
+Changes in v1.4.0:
+
+	- Made some changes to the Look and Feel system.
+	- Changed "Second, " to "Moreover, " and changed "Finally, " to "In addition, ". In the future, more complex transition hooks may be implemented.
+
+Changes in v1.3.6:
+
+	- Added ^C as shortcut for Create > Essay.
+
+Changes in v1.3.5:
+
+	- Fixed bug concerning the EssayWriter not deleting itself upon updating.
+
+	- Changed the text in the save before quitting window to be more clear.
+
+Changes in v1.3.3:
+
+	- Fixed problem where the EssayWriter would skip over every set of explanations, defenses, or illustrations if the first was blank.
+
+Changes in v1.3.2:
+
+	- Fixed preview window.
+
+Changes in v1.3.1:
+
+	- Fixed update window.
+
+Changes in v1.3.0:
+
+	- Added this nifty textbox to tell you the changes you're about to update to.
+
+	- Added the ability to avoid an update.
+
+	- Added a Preview button, which allows the user to preview the entire essay without actually saving or writing it.
